@@ -200,20 +200,6 @@ C<method set_post_handshake_auth : void ($val : int);>
 
 Calls native L<SSL_CTX_set_post_handshake_auth|https://docs.openssl.org/1.1.1/man3/SSL_CTX_set_verify> function given the pointer value of the instance, $val.
 
-=head2 set_session_id_context
-
-C<method set_session_id_context : int ($sid_ctx : string, $sid_ctx_len : int = -1);>
-
-Calls native L<SSL_CTX_set_session_id_context|https://docs.openssl.org/1.1.1/man3/SSL_CTX_set_alpn_select_cb> function given the pointer value of the instance, $sid_ctx, $sid_ctx_len, and returns its return value.
-
-If $sid_ctx_len is less than 0, it is set to the length of $sid_ctx.
-
-Exceptions:
-
-The context $sid_ctx must be defined. Otherwise an exception is thrown.
-
-If SSL_CTX_set_session_id_context failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
-
 =head2 set_min_proto_version
 
 C<method set_min_proto_version : int ($version : int);>
